fix alignment between slide number and copyright

--- a/src/slides/slides.css
+++ b/src/slides/slides.css
@@ -534,6 +534,7 @@ body:lang(en) {
   color: unset;
   font-family: unset;
   font-size: unset;
+  padding: unset;
 }
 
 .reveal .master-toc-return {
